--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/08/2020 11:59:00 PM</p>
+    <p class="lastupdate">09/09/2020 12:04:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,27 +50,27 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">65.4&#176;F</td>
+        <td class="data">65.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">65.4&#176;F</td>
+        <td class="data">65.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">65.4&#176;F</td>
+        <td class="data">65.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">52.5&#176;F</td>
+        <td class="data">52.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">63%</td>
+        <td class="data">64%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.704 inHg (0.049)</td>
+        <td class="data">29.704 inHg (0.048)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">77.4&#176;F</td>
+        <td class="data">77.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -110,11 +110,11 @@
       <table class="celestial">
         <tr>
           <td class="label">Sunrise</td>
-          <td class="data">06:39:36 AM</td>
+          <td class="data">06:40:21 AM</td>
         </tr>
         <tr>
           <td class="label">Sunset</td>
-          <td class="data">07:21:54 PM</td>
+          <td class="data">07:20:28 PM</td>
         </tr>
         <tr>
           <td class="label">Moon Phase</td>
@@ -153,10 +153,10 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="01:57:10 PM">
-            98.0</span><br/>
-          <span title="07:33:29 AM">
-            63.0</span>
+          <span title="12:00:01 AM">
+            65.4</span><br/>
+          <span title="12:00:23 AM">
+            65.3</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)">
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="01:57:10 PM" class="hival">
-            98.0</span>
+          <span title="12:00:01 AM" class="hival">
+            65.4</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)" class="hival">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="07:33:29 AM" class="loval">
-            63.0</span>
+          <span title="12:00:23 AM" class="loval">
+            65.3</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:33:29 AM (Tuesday)" class="loval">
@@ -235,10 +235,10 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="05:20:04 PM">
-            55.5</span><br/>
-          <span title="06:45:27 AM">
-            44.4</span>
+          <span title="12:00:41 AM">
+            52.9</span><br/>
+          <span title="12:00:23 AM">
+            52.4</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="11:23:38 AM (Monday)">
@@ -269,10 +269,10 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="10:48:57 PM">
-            67</span><br/>
-          <span title="01:21:46 PM">
-            18</span>
+          <span title="12:00:41 AM">
+            64</span><br/>
+          <span title="12:00:01 AM">
+            63</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="10:48:57 PM (Tuesday)">
@@ -303,10 +303,10 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="11:58:03 PM">
-            29.704</span><br/>
-          <span title="03:40:02 PM">
-            29.560</span>
+          <span title="12:02:01 AM">
+            29.705</span><br/>
+          <span title="12:01:01 AM">
+            29.700</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:59:02 AM (Sunday)">
@@ -375,9 +375,9 @@
       <tr>
         <td class="label">Wind Max</td>
         <td class="data new_row hilo_day">
-          <span title="04:37:50 PM">
-            15</span><br/>
-          207
+          <span title="12:00:47 AM">
+            1</span><br/>
+          34
         </td>
         <td class="data new_row hilo_week">
           <span title="04:31:00 PM (Monday)">
@@ -407,7 +407,7 @@
       <tr>
         <td class="label">Wind Average</td>
         <td class="data new_row hilo_day">
-          2</td>
+          0</td>
         <td class="data new_row hilo_week">
           2</td>
         <td class="data new_row hilo_month">
@@ -421,7 +421,7 @@
       <tr>
         <td class="label">Wind RMS</td>
         <td class="data new_row hilo_day">
-          2</td>
+          0</td>
         <td class="data new_row hilo_week">
           2</td>
         <td class="data new_row hilo_month">
@@ -439,8 +439,8 @@
           Average Direction
         </td>
         <td class="data new_row hilo_day">
-          1<br/>
-          184
+          0<br/>
+             N/A
         </td>
         <td class="data new_row hilo_week">
           0<br/>
@@ -470,10 +470,10 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
+          <span title="12:02:01 AM">
+            77.6</span><br/>
           <span title="12:00:01 AM">
-            87.2</span><br/>
-          <span title="07:51:01 AM">
-            75.0</span>
+            77.4</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:21:03 PM (Sunday)">
@@ -505,10 +505,10 @@
       <tr>
         <td class="label">Inside Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="09:42:03 PM">
-            45</span><br/>
-          <span title="12:07:01 AM">
-            28</span>
+          <span title="12:00:01 AM">
+            42</span><br/>
+          <span title="12:00:01 AM">
+            42</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:42:03 PM (Tuesday)">
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">90%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">7 days, 9 hours, 12 minutes</td>
+      <td class="data">7 days, 9 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">7 days, 9 hours, 12 minutes</td>
+      <td class="data">7 days, 9 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
