--- a/statistics.html
+++ b/statistics.html
@@ -36,7 +36,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/08/2020 11:59:00 PM</p>
+    <p class="lastupdate">09/09/2020 12:04:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -84,10 +84,10 @@
         <tr>
           <td class="label">Outside Temperature</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">98.0<br/>
-            <span class="timestamp">01:57:10 PM</span><br/>
-            63.0<br/>
-            <span class="timestamp">07:33:29 AM</span>
+          <td class="data new_row">65.4<br/>
+            <span class="timestamp">12:00:01 AM</span><br/>
+            65.3<br/>
+            <span class="timestamp">12:00:23 AM</span>
           </td>
           <td class="data new_row">117.5<br/>
             <span class="timestamp">04:04:42 PM (Sunday)</span><br/>
@@ -113,8 +113,8 @@
         <tr>
           <td class="label">Heat Index</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">98.0<br/>
-            <span class="timestamp">01:57:10 PM</span>
+          <td class="data new_row">65.4<br/>
+            <span class="timestamp">12:00:01 AM</span>
           </td>
           <td class="data new_row">117.5<br/>
             <span class="timestamp">04:04:42 PM (Sunday)</span>
@@ -132,8 +132,8 @@
         <tr>
           <td class="label">Wind Chill</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">63.0<br/>
-            <span class="timestamp">07:33:29 AM</span>
+          <td class="data new_row">65.3<br/>
+            <span class="timestamp">12:00:23 AM</span>
           </td>
           <td class="data new_row">63.0<br/>
             <span class="timestamp">07:33:29 AM (Tuesday)</span>
@@ -151,10 +151,10 @@
         <tr>
           <td class="label">Dew Point</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">55.5<br/>
-            <span class="timestamp">05:20:04 PM</span><br/>
-            44.4<br/>
-            <span class="timestamp">06:45:27 AM</span>
+          <td class="data new_row">52.9<br/>
+            <span class="timestamp">12:00:41 AM</span><br/>
+            52.4<br/>
+            <span class="timestamp">12:00:23 AM</span>
           </td>
           <td class="data new_row">58.4<br/>
             <span class="timestamp">11:23:38 AM (Monday)</span><br/>
@@ -180,10 +180,10 @@
         <tr>
           <td class="label">Humidity</td>
           <td class="units">%</td>
-          <td class="data new_row">67<br/>
-            <span class="timestamp">10:48:57 PM</span><br/>
-            18<br/>
-            <span class="timestamp">01:21:46 PM</span>
+          <td class="data new_row">64<br/>
+            <span class="timestamp">12:00:41 AM</span><br/>
+            63<br/>
+            <span class="timestamp">12:00:01 AM</span>
           </td>
           <td class="data new_row">67<br/>
             <span class="timestamp">10:48:57 PM (Tuesday)</span><br/>
@@ -209,10 +209,10 @@
         <tr>
           <td class="label">Barometer</td>
           <td class="units"> inHg</td>
-          <td class="data new_row">29.704<br/>
-            <span class="timestamp">11:58:03 PM</span><br/>
-            29.560<br/>
-            <span class="timestamp">03:40:02 PM</span>
+          <td class="data new_row">29.705<br/>
+            <span class="timestamp">12:02:01 AM</span><br/>
+            29.700<br/>
+            <span class="timestamp">12:01:01 AM</span>
           </td>
           <td class="data new_row">29.954<br/>
             <span class="timestamp">09:59:02 AM (Sunday)</span><br/>
@@ -275,9 +275,9 @@
             &#176;
           </td>
           <td class="data new_row">
-            15<br/>
-            207<br/>
-            <span class="timestamp">04:37:50 PM</span>
+            1<br/>
+            34<br/>
+            <span class="timestamp">12:00:47 AM</span>
           </td>
           <td class="data new_row">
             15<br/>
@@ -304,7 +304,7 @@
           <td class="label">Wind Average</td>
           <td class="units"> mph</td>
           <td class="data new_row">
-            2</td>
+            0</td>
           <td class="data new_row">
             2</td>
           <td class="data new_row">
@@ -317,7 +317,7 @@
         <tr>
           <td class="label">Wind RMS</td>
           <td class="units"> mph</td>
-          <td class="data new_row">2</td>
+          <td class="data new_row">0</td>
           <td class="data new_row">2</td>
           <td class="data new_row">3</td>
           <td class="data new_row">6</td>
@@ -334,8 +334,8 @@
             &#176;
           </td>
           <td class="data new_row">
-            1<br/>
-            184
+            0<br/>
+               N/A
           </td>
           <td class="data new_row">
             0<br/>
@@ -361,10 +361,10 @@
           <td class="label">Inside Temperature</td>
           <td class="units">&#176;F</td>
           <td class="data new_row">
-            87.2<br/>
-            <span class="timestamp">12:00:01 AM</span><br/>
-            75.0<br/>
-            <span class="timestamp">07:51:01 AM</span>
+            77.6<br/>
+            <span class="timestamp">12:02:01 AM</span><br/>
+            77.4<br/>
+            <span class="timestamp">12:00:01 AM</span>
           </td>
           <td class="data new_row">
             91.8<br/>
@@ -396,10 +396,10 @@
           <td class="label">Inside Humidity</td>
           <td class="units">%</td>
           <td class="data new_row">
-            45<br/>
-            <span class="timestamp">09:42:03 PM</span><br/>
-            28<br/>
-            <span class="timestamp">12:07:01 AM</span>
+            42<br/>
+            <span class="timestamp">12:00:01 AM</span><br/>
+            42<br/>
+            <span class="timestamp">12:00:01 AM</span>
           </td>
           <td class="data new_row">
             45<br/>
