--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/09/2020 12:14:00 AM</p>
+    <p class="lastupdate">09/09/2020 12:19:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">64.8&#176;F</td>
+        <td class="data">64.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">64.8&#176;F</td>
+        <td class="data">64.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">64.8&#176;F</td>
+        <td class="data">64.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">52.3&#176;F</td>
+        <td class="data">52.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">64%</td>
+        <td class="data">65%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.704 inHg (0.044)</td>
+        <td class="data">29.705 inHg (0.040)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph NE (45&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">77.8&#176;F</td>
+        <td class="data">77.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             65.4</span><br/>
-          <span title="12:12:31 AM">
-            64.8</span>
+          <span title="12:17:59 AM">
+            64.5</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="12:12:31 AM" class="loval">
-            64.8</span>
+          <span title="12:17:59 AM" class="loval">
+            64.5</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:33:29 AM (Tuesday)" class="loval">
@@ -237,8 +237,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:41 AM">
             52.9</span><br/>
-          <span title="12:12:31 AM">
-            52.3</span>
+          <span title="12:15:47 AM">
+            52.1</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="11:23:38 AM (Monday)">
@@ -269,8 +269,8 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="12:00:41 AM">
-            64</span><br/>
+          <span title="12:17:47 AM">
+            65</span><br/>
           <span title="12:00:01 AM">
             63</span>
         </td>
@@ -303,8 +303,8 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="12:02:01 AM">
-            29.705</span><br/>
+          <span title="12:14:01 AM">
+            29.707</span><br/>
           <span title="12:01:01 AM">
             29.700</span>
         </td>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="12:08:01 AM">
-            77.8</span><br/>
+          <span title="12:16:01 AM">
+            77.9</span><br/>
           <span title="12:00:01 AM">
             77.4</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">7 days, 9 hours, 27 minutes</td>
+      <td class="data">7 days, 9 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">7 days, 9 hours, 27 minutes</td>
+      <td class="data">7 days, 9 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
