--- a/statistics.html
+++ b/statistics.html
@@ -36,7 +36,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/09/2020 12:39:00 AM</p>
+    <p class="lastupdate">09/09/2020 12:44:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -151,8 +151,8 @@
         <tr>
           <td class="label">Dew Point</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">52.9<br/>
-            <span class="timestamp">12:00:41 AM</span><br/>
+          <td class="data new_row">53.3<br/>
+            <span class="timestamp">12:41:41 AM</span><br/>
             51.4<br/>
             <span class="timestamp">12:34:51 AM</span>
           </td>
@@ -180,13 +180,13 @@
         <tr>
           <td class="label">Humidity</td>
           <td class="units">%</td>
-          <td class="data new_row">67<br/>
-            <span class="timestamp">12:38:17 AM</span><br/>
+          <td class="data new_row">69<br/>
+            <span class="timestamp">12:41:41 AM</span><br/>
             63<br/>
             <span class="timestamp">12:00:01 AM</span>
           </td>
-          <td class="data new_row">67<br/>
-            <span class="timestamp">10:48:57 PM (Tuesday)</span><br/>
+          <td class="data new_row">69<br/>
+            <span class="timestamp">12:41:41 AM (Wednesday)</span><br/>
             9<br/>
             <span class="timestamp">04:59:20 PM (Sunday)</span>
           </td>
@@ -209,8 +209,8 @@
         <tr>
           <td class="label">Barometer</td>
           <td class="units"> inHg</td>
-          <td class="data new_row">29.707<br/>
-            <span class="timestamp">12:14:01 AM</span><br/>
+          <td class="data new_row">29.709<br/>
+            <span class="timestamp">12:40:01 AM</span><br/>
             29.700<br/>
             <span class="timestamp">12:01:01 AM</span>
           </td>
