--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/09/2020 01:19:00 AM</p>
+    <p class="lastupdate">09/09/2020 01:24:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">62.5&#176;F</td>
+        <td class="data">62.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">62.5&#176;F</td>
+        <td class="data">62.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">62.5&#176;F</td>
+        <td class="data">62.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">51.8&#176;F</td>
+        <td class="data">52.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">68%</td>
+        <td class="data">70%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.711 inHg (0.028)</td>
+        <td class="data">29.714 inHg (0.026)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph NE (45&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -155,14 +155,14 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             65.4</span><br/>
-          <span title="01:18:07 AM">
-            62.5</span>
+          <span title="01:22:35 AM">
+            62.2</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)">
             117.5</span><br/>
-          <span title="01:18:07 AM (Wednesday)">
-            62.5</span>
+          <span title="01:22:35 AM (Wednesday)">
+            62.2</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM">
@@ -211,12 +211,12 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="01:18:07 AM" class="loval">
-            62.5</span>
+          <span title="01:22:35 AM" class="loval">
+            62.2</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="01:18:07 AM (Wednesday)" class="loval">
-            62.5</span>
+          <span title="01:22:35 AM (Wednesday)" class="loval">
+            62.2</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/01/2020 06:47:50 AM" class="loval">
@@ -303,8 +303,8 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="01:18:01 AM">
-            29.711</span><br/>
+          <span title="01:23:01 AM">
+            29.714</span><br/>
           <span title="12:01:01 AM">
             29.700</span>
         </td>
@@ -444,7 +444,7 @@
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          346
+          347
         </td>
         <td class="data new_row hilo_month">
           0<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">7 days, 10 hours, 32 minutes</td>
+      <td class="data">7 days, 10 hours, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">7 days, 10 hours, 32 minutes</td>
+      <td class="data">7 days, 10 hours, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
